# goose

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  notes.md
docs/: pitch.md
playground/: README.md  pyproject.toml  screen_parsing.ipynb  template.ipynb
src/: errors.rs  main.rs  utils.rs
src/gui/: app.rs
src/gui/components/: common.rs  grab_box.rs  mod.rs
src/nav/: coordinate.rs  location.rs  mod.rs  strategy.rs
src/verb/: action.rs  click.rs  input.rs  mod.rs  scroll.rs
