[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.1",
    "opencv-python>=4.10.0.84",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pillow>=10.4.0",
    "setuptools-rust>=1.10.1",
]
