[project]
name = "gui-automation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "numpy>=2.1.1",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
    "pillow>=10.4.0",
    "opencv-python>=4.10.0.84",
]
